<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_coordinate_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_hint"
        android:id="@+id/main_username_etxt"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/designation_hint"
        android:layout_below="@+id/main_username_etxt"
        android:id="@+id/main_designation_etxt"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/where_condition_hint"
        android:layout_below="@+id/main_designation_etxt"
        android:inputType="number"
        android:id="@+id/main_where_condition_etxt"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_btn_text"
        android:id="@+id/main_insert_btn"
        android:layout_below="@+id/main_where_condition_etxt"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_btn_text"
        android:id="@+id/main_update_btn"
        android:layout_toRightOf="@+id/main_insert_btn"
        android:layout_below="@+id/main_where_condition_etxt"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_btn_text"
        android:id="@+id/main_delete_btn"
        android:layout_toRightOf="@+id/main_update_btn"
        android:layout_below="@+id/main_where_condition_etxt"
        />

    <ListView
        android:id="@+id/main_list_view"
        android:layout_below="@+id/main_insert_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

</RelativeLayout>
</android.support.design.widget.CoordinatorLayout>